--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
+    "debounce": "^2.2.0",
     "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide": "^0.485.0",
     "lucide-react": "^0.485.0",
     "node": "^18.20.8",
